[package]
name = "istat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "ws"]}
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
lazy_static = "1.4"
hyper = "1.5.2"
axum-server = "0.7.1"
csv = "1.1"
axum-macros = "0.5.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "mysql"] }
rand = "0.9.0"
axum-extra = { version = "0.10.0", features = ["cookie"] }  # Cookie handling
http = {version = "1.2.0"}
futures = "0.3"
once_cell = "1.10.0"
base64 = "0.22.1"

